--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/evil-icons": "^12.0.0",
+    "@react-native-vector-icons/fontawesome6": "^12.0.0",
+    "@react-native-vector-icons/material-design-icons": "^12.0.0",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/elements": "^2.4.2",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-paper": "^5.14.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
